--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,22 +1,61 @@
 .form {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  gap: 1rem;
+  width: 450px;
+  gap: 2rem;
 }
 
 .inputContainer {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
   width: 100%;
   color: var(--black);
 }
 
-.inputContainer label {
+.expNCvc {
+  display: flex;
+  gap: 0.3rem;
+}
+
+.inputContainer .monthNYear {
+  display: flex;
+  gap: 0.8rem;
+}
+.inputContainer .monthNYear input {
+  width: 43%;
 }
 
 .btn {
   background-color: var(--black);
   padding: 0.7rem;
   color: var(--white);
+  border: none;
+  border-radius: 5px;
+  margin-top: 0.5rem;
+  cursor: pointer;
+}
+
+.cvcInp {
+  width: 100%;
+}
+
+.inputContainer label {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 15px;
+}
+
+.inputContainer input {
+  border-radius: 5px;
+  padding: 0.6rem 0.8rem;
+  border: 1px solid var(--gray);
+  outline: none;
+}
+.inputContainer input:focus {
+  border-color: var(--dark-gray);
+}
+
+.inputContainer input::placeholder {
+  color: var(--dark-gray);
 }
