--- a/src/containers/CardsContainer/CardsContainer.module.css
+++ b/src/containers/CardsContainer/CardsContainer.module.css
@@ -1,3 +1,78 @@
 .cardsCont {
   flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.background {
+  min-height: 100vh;
+  width: 570px;
+  background: url('../../../public/images/bg-main-desktop.png') center no-repeat;
+  background-size: cover;
+}
+
+.frontCard,
+.backCard {
+  width: 447px;
+  height: 245px;
+  border-radius: 13px;
+  box-shadow: 5px 15px 40px hsla(278, 68%, 11%, 0.195);
+}
+
+.cards {
+  position: relative;
+}
+
+.frontCard {
+  background: url('../../../public/images/bg-card-front.png');
+  position: absolute;
+  left: -330px;
+  top: -260px;
+}
+
+.backCard {
+  background: url('../../../public/images/bg-card-back.png');
+  position: absolute;
+  left: -250px;
+  top: 30px;
+}
+
+.frontCard img {
+  margin: 1.5rem;
+}
+.cardNum {
+  color: var(--white);
+  font-size: 30px;
+  letter-spacing: 2px;
+  position: absolute;
+  bottom: 24%;
+  left: 27px;
+}
+.name,
+.expDate {
+  position: absolute;
+  bottom: 7%;
+  color: var(--white);
+}
+.name {
+  left: 27px;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+.expDate {
+  right: 27px;
+  color: var(--white);
+}
+.expDate p,
+.expDate p span {
+  font-size: 14px;
+}
+
+.cvc {
+  position: absolute;
+  right: 57px;
+  bottom: 115px;
+  color: var(--white);
+  letter-spacing: 2px;
+  font-size: 15px;
 }
