--- a/src/containers/FormContainer/FormContainer.module.css
+++ b/src/containers/FormContainer/FormContainer.module.css
@@ -1,7 +1,8 @@
 .formCont {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   min-width: 500px;
   flex: 2;
+  padding-right: 15rem;
 }
