--- a/src/containers/CardsContainer/CardsContainer.module.css
+++ b/src/containers/CardsContainer/CardsContainer.module.css
@@ -7,7 +7,7 @@
 .background {
   min-height: 100vh;
   width: 570px;
-  background: url('../../../public/images/bg-main-desktop.png') center no-repeat;
+  background: url('/images/bg-main-desktop.png') center no-repeat;
   background-size: cover;
 }
 
@@ -24,14 +24,14 @@
 }
 
 .frontCard {
-  background: url('../../../public/images/bg-card-front.png');
+  background: url('/images/bg-card-front.png');
   position: absolute;
   left: -330px;
   top: -260px;
 }
 
 .backCard {
-  background: url('../../../public/images/bg-card-back.png');
+  background: url('/images/bg-card-back.png');
   position: absolute;
   left: -250px;
   top: 30px;
