--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -68,3 +68,28 @@
   font-size: 15px;
   display: block;
 }
+
+.hidden {
+  display: none;
+}
+
+.complete {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 450px;
+  gap: 1rem;
+}
+
+.complete h2 {
+  font-size: 2rem;
+  letter-spacing: 2px;
+  margin-top: 1rem;
+}
+.complete p {
+  margin-bottom: 1rem;
+}
+
+.complete button {
+  width: 100%;
+}
