--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,18 @@ main {
   align-items: center;
   justify-content: space-between;
 }
+
+@media (max-width: 1050px) {
+  main {
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+    justify-content: start;
+  }
+}
+
+@media (max-width: 620px) {
+  main {
+    align-items: start;
+  }
+}
